2003-01-30  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev-en 00852] Re: Enhancement: content type detection of files
	* url.c (DefaultGuess): remove upppercases
		(guessContentTypeFromTable): rewrite, strcasecmp

2003-01-30  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03708] Re: Don't stop loading image when moving to next page.
	* config.h.dist (lstat): define ifndef HAVE_LSTAT
	* configure (config.h) ditto
	* display.c (fmTerm): new loadImage
		(save_current_buf): only ifdef USE_BUFINFO
		(displayBuffer): new loadImage
	* etc.c (setup_child): TrapSignal
	* file.c (loadGeneralFile): TRAP_OFF, TRAP_ON
		(loadHTMLstream): ditto
		(loadGopherDir): ditto
		(loadBuffer): ditto
		(loadImageBuffer): ditto
		(getNextPage): ditto
		(save2tmp): ditto
	* fm.h (TrapSignal): added
		(TRAP_ON): added
		(TRAP_OFF): added
	* form.c (HAVE_LSTAT): deleted
	* frame.c (createFrameFile): TRAP_OFF, TRAP_ON
	* image.c (image_buffer): added
		(deleteImage): new loadImage
		(getAllImage): initialize image_buffer
		(loadImage): rewrite
	* main.c (main): new loadImage
		(checkDownloadList): remove ifdef HAVE_LSTAT
	* news.c (loadNwesgroup): TRAP_ON, TRAP_OFF
	* proto.h (loadImage): add buf arg
	* url.c (openSocket): TRAP_ON, TRAP_OFF
		(check_no_proxy): TRAP_ON, TRAP_OFF

2003-01-29  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03707] Don't stop loading image when moving to next page.
	* display.c (save_current_buf): required when defined USE_IMAGE
		(displayBuffer): stop only buffer changed
	* image.c (loadImage): IMG_FLAG_START load from maxLoadImage

2003-01-29  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03706] X-Image-URL: support, bug fix of reshapeBuffer()
	* buffer.c (reshapeBuffer): rewrite
	* file.c (readHeader): rewrite

2003-01-29  NAKAJIMA Mikio <minakaji@osaka.email.ne.jp>

	* [w3m-dev 03705] goodict.cgi (was: Re: google.cgi (was: Re: keymap key SEARCH string))
	* Bonus/goodict.cgi: added
