@@ -1,5 +1,15 @@
 2003-01-30  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03709] Re: view source, edit source
+	* display.c (displayBuffer): INIT_BUFFER_WIDTH
+	* file.c (_saveBuffer): added
+		(saveBuffer): use _saveBuffer
+		(saveBufferBody): added
+	* main.c (vmSrc): saveBufferBody
+	* proto.h (saveBufferBody): added
+
+2003-01-30  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev-en 00852] Re: Enhancement: content type detection of files
 	* url.c (DefaultGuess): remove upppercases
 		(guessContentTypeFromTable): rewrite, strcasecmp
